@@ -1,3 +1,9 @@
+Sat Jan 27 15:22:03 2001  Ossama Othman  <ossama@uci.edu>
+
+	* tests/Thread_Mutex_Test.cpp (test):
+
+	  Added code that tests mutex timeout functionality.
+
 Sat Jan 27 15:16:33 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>
 
 	* ace/POSIX_Proactor.h: Replace ACE_Thread_Mutex with ACE_SYNCH_MUTEX 
